kubernetes-deploy-dev.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bayu-buana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "11m"
    nginx.ingress.kubernetes.io/large-client-header-buffers: "128k"
    nginx.ingress.kubernetes.io/http2_max_header_size: "32k"
    nginx.ingress.kubernetes.io/http2-max-field-size: "8k"
  name: bbingress
  namespace: bayu-buana
spec:
  rules:
    - host: bbstg.monstercode.net
      http:
        paths:
          - pathType: Prefix
            path: /api/v1/master
            backend:
              service:
                name: master-service-cluster
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/integration
            backend:
              service:
                name: integration-service-cluster
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/loyalty
            backend:
              service:
                name: loyalty-service-cluster
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/reservation
            backend:
              service:
                name: reservation-service-cluster
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/payment
            backend:
              service:
                name: payment-service-cluster
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/user
            backend:
              service:
                name: user-service-cluster
                port:
                  number: 80
          - pathType: Prefix
            path: /oauth2
            backend:
              service:
                name: user-service-cluster
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/multimedia
            backend:
              service: 
                name: multimedia-service-cluster
                port:
                  number: 80
          - pathType: Prefix
            path: /files
            backend:
              service: 
                name: multimedia-service-cluster
                port:
                  number: 80
          - pathType: Prefix
            path: /
            backend:
              service: 
                name: frontend-service-cluster
                port:
                  number: 80
    - host: bbdev.monstercode.net
      http:
        paths:
          - pathType: Prefix
            path: /api/v1/master
            backend:
              service:
                name: master-service-cluster-dev
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/integration
            backend:
              service:
                name: integration-service-cluster-dev
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/loyalty
            backend:
              service:
                name: loyalty-service-cluster-dev
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/reservation
            backend:
              service:
                name: reservation-service-cluster-dev
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/payment
            backend:
              service:
                name: payment-service-cluster-dev
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/user
            backend:
              service:
                name: user-service-cluster-dev
                port:
                  number: 80
          - pathType: Prefix
            path: /oauth2
            backend:
              service:
                name: user-service-cluster-dev
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/multimedia
            backend:
              service: 
                name: multimedia-service-cluster-dev
                port:
                  number: 80
          - pathType: Prefix
            path: /files
            backend:
              service: 
                name: multimedia-service-cluster-dev
                port:
                  number: 80
          - pathType: Prefix
            path: /
            backend:
              service: 
                name: frontend-service-cluster-dev
                port:
                  number: 80
    - host: bbprod.monstercode.net
      http:
        paths:
          - pathType: Prefix
            path: /api/v1/master
            backend:
              service:
                name: master-service-cluster-prod
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/integration
            backend:
              service:
                name: integration-service-cluster-prod
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/loyalty
            backend:
              service:
                name: loyalty-service-cluster-prod
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/reservation
            backend:
              service:
                name: reservation-service-cluster-prod
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/payment
            backend:
              service:
                name: payment-service-cluster-prod
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/user
            backend:
              service:
                name: user-service-cluster-prod
                port:
                  number: 80
          - pathType: Prefix
            path: /oauth2
            backend:
              service:
                name: user-service-cluster-prod
                port:
                  number: 80
          - pathType: Prefix
            path: /api/v1/multimedia
            backend:
              service: 
                name: multimedia-service-cluster-prod
                port:
                  number: 80
          - pathType: Prefix
            path: /files
            backend:
              service: 
                name: multimedia-service-cluster-prod
                port:
                  number: 80
          - pathType: Prefix
            path: /
            backend:
              service: 
                name: frontend-service-cluster-prod
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: master-service-cluster-dev
  namespace: bayu-buana
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9000
  selector:
    app: master-service-dev
---
apiVersion: v1
kind: Service
metadata:
  name: multimedia-service-cluster-dev
  namespace: bayu-buana
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9001
  selector:
    app: multimedia-service-dev
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-cluster-dev
  namespace: bayu-buana
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend-service-dev
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: bayu-buana
spec:
  ports:
    - port: 6379
      name: redis
  selector:
    app: cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  labels:
    app: cache
  namespace: bayu-buana
spec:
  selector:
    matchLabels:
      app: cache
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
  replicas: 1
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - image: redis
          name: redis
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
      nodeSelector:
        has-storage: "no"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master-service-dev
  namespace: bayu-buana
  labels:
    app: master-service-dev
spec:
  selector:
    matchLabels:
      app: master-service-dev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 2
  template:
    metadata:
      labels:
        app: master-service-dev
    spec:
      hostPID: true
      containers:
        - image: registry.tog.co.id/bb/master-service:latest
          name: master-service-dev
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
      nodeSelector:
        has-storage: "no"
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multimedia-service-dev
  namespace: bayu-buana
  labels:
    app: multimedia-service-dev
spec:
  selector:
    matchLabels:
      app: multimedia-service-dev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 2
  template:
    metadata:
      labels:
        app: multimedia-service-dev
    spec:
      hostPID: true
      containers:
        - image: registry.tog.co.id/bb/multimedia-service:latest
          name: multimedia-service-dev
          imagePullPolicy: Always
          ports:
            - containerPort: 9001
          volumeMounts:
          - mountPath: "/data"
            name: bb-storage
      nodeSelector:
        has-storage: "yes"
      volumes:
        - name: bb-storage
          persistentVolumeClaim:
            claimName: csi-pvc
      imagePullSecrets:
        - name: regcred
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: frontend-service-dev
#   namespace: bayu-buana
#   labels:
#     app: frontend-service-dev
# spec:
#   selector:
#     matchLabels:
#       app: frontend-service-dev
#   strategy:
#     type: RollingUpdate
#     rollingUpdate:
#       maxSurge: 1
#       maxUnavailable: 0
#   replicas: 2
#   template:
#     metadata:
#       labels:
#         app: frontend-service-dev
#     spec:
#       hostPID: true
#       containers:
#         - image: registry.tog.co.id/bb/bayu-buana-cms:cms-prod
#           name: frontend-service-dev
#           imagePullPolicy: Always
#           ports:
#             - containerPort: 80
#           env:
#             - name: TZ
#               value: Asia/Jakarta
#             - name: VERSION
#               value: "{API_VERSION}"
#           envFrom:
#             - secretRef:
#                 name: master-service-config-dev
#       imagePullSecrets:
#         - name: regcred
